--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -58,8 +58,13 @@ jobs:
     #    and modify them (or add more) to build your code if your project
     #    uses a compiled language
 
-    #- run: |
-    #   make bootstrap
+    - run: |
+      ls -la 
+    
+    
+    
+    
+    
     #   make release
 
     - name: Perform CodeQL Analysis
